force-app/main/default/objects/Nimbus_Outage__c/Nimbus_Outage__c.object-meta.xml
<CustomObject>
    <description>Synthetic Nimbus service/outage records by region. Feeds Topic 3 (Service &amp; Outage Status) via a deterministic grounded query. No real data.</description>
    <label>Nimbus Outage</label>
    <nameField>
        <label>Outage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nimbus Outages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>