force-app/main/default/objects/Nimbus_Outage__c/fields/Estimated_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Resolution__c</fullName>
    <description>Human-readable estimated time to resolution (e.g. "within 2 hours", "by 6 PM ET"). Blank if unknown or resolved.</description>
    <label>Estimated Resolution</label>
    <length>120</length>
    <type>Text</type>
</CustomField>