force-app/main/default/objects/Nimbus_Outage__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the outage is currently ongoing. False once the incident is resolved.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>