force-app/main/default/objects/Nimbus_Outage__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Service region this outage record covers (e.g. "Northeast", "Bay Area", "London").</description>
    <label>Region</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>