force-app/main/default/objects/Nimbus_Outage__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Human-readable description of the outage and affected services, relayed to the customer verbatim.</description>
    <label>Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>